style/contacts.css
.contact-main {
    display: flex;
    max-width: 1440px;
    background-color: #F6F7F8;
    height: 100%;
    
}

.sidebar-contacts {
    position: absolute;
    left: 232px;
    top: 96px;
    overflow-y: scroll;
    background: #FFFFFF;
    box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
    width: 33%;
    /* z-index: 20; creates issue with rest of main container -> h2 disappears behind contact list. without z-index box shadow from header interfers*/
    height: calc(100vh - 96px);
}

.contact-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 17px 36px;
    gap: 8px;
    
}

.contact-list-header {
    flex: none;
    order: 1;
    flex-grow: 0;
}

.add-contact-btn {
    padding-top: 20px;
    margin-top: 20px;
    margin-right: auto;
    margin-left: auto;
}

.seperator {
    margin-top: 1px;
    margin-bottom: 1px;
    height: 1px;
    border-radius: 3px;
    background-color: #D1D1D1;
}

.single-letter {
    margin: 8px;
    padding: 17px 36px;
    font-size: 20px;
    font-weight: 400;
    font-family: "Inter";
}

.single-letter-section {
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
}

.contact-display {
    width: 66%;
    margin-left: 33%;
}

